--- a/.travis.yml
+++ b/.travis.yml
@@ -45,6 +45,7 @@ jobs:
 before_install:
   - nvm use 12.13.1
   - composer create-project --no-dev acquia/orca ../orca "$ORCA_VERSION"
+  - curl https://patch-diff.githubusercontent.com/raw/acquia/orca/pull/104.patch | git -C ../orca apply
   - ../orca/bin/travis/before_install.sh
 
 install: ../orca/bin/travis/install.sh
