--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,17 @@
         }
     ],
     "require-dev": {
-        "phpunit/phpunit": "^9.1"
+        "phpunit/phpunit": "^9.1",
+        "acquia/coding-standards": "^0.4.3",
+        "dealerdirect/phpcodesniffer-composer-installer": "^0.7.0"
     },
     "autoload": {
         "psr-4": {
             "Acquia\\DrupalEnvironmentDetector\\": "src/",
             "Acquia\\DrupalEnvironmentDetector\\Tests\\": "tests/"
         }
+    },
+    "extra": {
+        "phpcodesniffer-search-depth": "4"
     }
 }
