--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,10 @@
         "sort-packages": true
     },
     "extra": {
-        "phpcodesniffer-search-depth": "4"
+        "phpcodesniffer-search-depth": "4",
+        "branch-alias": {
+            "dev-master": "1.x-dev"
+        }
     },
     "autoload": {
         "psr-4": {
