--- a/composer.json
+++ b/composer.json
@@ -18,10 +18,10 @@
         "sort-packages": true
     },
     "extra": {
-        "phpcodesniffer-search-depth": "4",
         "branch-alias": {
             "dev-master": "1.x-dev"
-        }
+        },
+        "phpcodesniffer-search-depth": "4"
     },
     "autoload": {
         "psr-4": {
