--- a/.github/workflows/orca.yml
+++ b/.github/workflows/orca.yml
@@ -1,6 +1,10 @@
 ---
 name: ORCA CI
-on: [ push, pull_request ]
+on:
+  push:
+  pull_request:
+  schedule:
+    - cron: "0 0 * * *"
 jobs:
   build:
     runs-on: ubuntu-latest
