--- a/.github/workflows/orca.yml
+++ b/.github/workflows/orca.yml
@@ -65,6 +65,7 @@ jobs:
         run: |
           composer create-project --no-dev --no-install --ignore-platform-req=php acquia/orca ../orca "$ORCA_VERSION"
           curl https://patch-diff.githubusercontent.com/raw/acquia/orca/pull/177.patch | git -C ../orca apply
+          curl https://patch-diff.githubusercontent.com/raw/acquia/orca/pull/179.patch | git -C ../orca apply
           composer install -d ../orca
           ../orca/bin/ci/before_install.sh
 
