--- a/.github/workflows/orca.yml
+++ b/.github/workflows/orca.yml
@@ -62,10 +62,7 @@ jobs:
           coverage: xdebug2
 
       - name: Before install
-        run: |
-          composer create-project --no-dev --no-install acquia/orca ../orca "$ORCA_VERSION"
-          curl https://patch-diff.githubusercontent.com/raw/acquia/orca/pull/189.patch | git -C ../orca apply
-          composer install -d ../orca
+        run: composer create-project --no-dev acquia/orca ../orca "$ORCA_VERSION"
 
       - name: Install
         run: ../orca/bin/ci/install.sh
