--- a/.github/workflows/orca.yml
+++ b/.github/workflows/orca.yml
@@ -11,7 +11,7 @@ jobs:
     env:
       ORCA_SUT_NAME: acquia/drupal-environment-detector
       ORCA_SUT_BRANCH: master
-      ORCA_VERSION: dev-develop
+      ORCA_VERSION: "dev-develop:ec215738330008d409eb7c55b8d5a30dddb3daaa"
       ORCA_JOB: ${{ matrix.orca-job }}
       ORCA_COVERALLS_ENABLE: ${{ matrix.coveralls-enable }}
       COVERALLS_REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -64,8 +64,8 @@ jobs:
 
       - name: Before install
         run: |
-          composer create-project --no-dev --no-install acquia/orca ../orca "$ORCA_VERSION"
-          curl https://patch-diff.githubusercontent.com/raw/acquia/orca/pull/189.patch | git -C ../orca apply
+          composer create-project --no-dev --no-install --ignore-platform-req=php acquia/orca ../orca "$ORCA_VERSION"
+          curl https://patch-diff.githubusercontent.com/raw/acquia/orca/pull/179.patch | git -C ../orca apply
           composer install -d ../orca
 
       - name: Install
