--- a/.github/workflows/orca.yml
+++ b/.github/workflows/orca.yml
@@ -68,6 +68,7 @@ jobs:
           git -C ../orca checkout ec215738330008d409eb7c55b8d5a30dddb3daaa
           curl https://patch-diff.githubusercontent.com/raw/acquia/orca/pull/179.patch | git -C ../orca apply
           composer install -d ../orca
+           ../orca/bin/ci/before_install.sh
 
       - name: Install
         run: ../orca/bin/ci/install.sh
