--- a/.github/workflows/orca.yml
+++ b/.github/workflows/orca.yml
@@ -63,9 +63,8 @@ jobs:
 
       - name: Before install
         run: |
-          composer create-project --no-dev --no-install acquia/orca ../orca "$ORCA_VERSION"
-          curl https://patch-diff.githubusercontent.com/raw/acquia/orca/pull/189.patch | git -C ../orca apply
-          composer install -d ../orca
+          composer create-project --no-dev acquia/orca ../orca "$ORCA_VERSION"
+          ../orca/bin/ci/before_install.sh
 
       - name: Install
         run: ../orca/bin/ci/install.sh
