--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,15 @@
         }
     ],
     "require-dev": {
-        "acquia/coding-standards": "^0.4.3",
+        "acquia/coding-standards": "^0.8.0",
         "dealerdirect/phpcodesniffer-composer-installer": "^0.7.0",
         "phpunit/phpunit": "^9.1"
     },
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "dealerdirect/phpcodesniffer-composer-installer": true
+        }
     },
     "extra": {
         "branch-alias": {
