--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,10 @@
         "phpunit/phpunit": "^9.1"
     },
     "config": {
-        "sort-packages": true,
         "allow-plugins": {
             "dealerdirect/phpcodesniffer-composer-installer": true
-        }
+        },
+        "sort-packages": true
     },
     "extra": {
         "branch-alias": {
