--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,10 @@
         "branch-alias": {
             "dev-master": "1.x-dev"
         },
-        "phpcodesniffer-search-depth": "4"
+        "phpcodesniffer-search-depth": "4",
+        "violinist": {
+            "allow_updates_beyond_constraint": 0
+        }
     },
     "autoload": {
         "psr-4": {
