--- a/composer.json
+++ b/composer.json
@@ -10,18 +10,24 @@
         }
     ],
     "require-dev": {
-        "acquia/coding-standards": "^0.4.3",
+        "acquia/coding-standards": "^0.8.0",
         "dealerdirect/phpcodesniffer-composer-installer": "^0.7.0",
         "phpunit/phpunit": "^9.1"
     },
     "config": {
+        "allow-plugins": {
+            "dealerdirect/phpcodesniffer-composer-installer": true
+        },
         "sort-packages": true
     },
     "extra": {
         "branch-alias": {
             "dev-master": "1.x-dev"
         },
-        "phpcodesniffer-search-depth": "4"
+        "phpcodesniffer-search-depth": "4",
+        "violinist": {
+            "allow_updates_beyond_constraint": 0
+        }
     },
     "autoload": {
         "psr-4": {
