--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,9 @@
         "allow-plugins": {
             "dealerdirect/phpcodesniffer-composer-installer": true
         },
+        "platform": {
+            "php": "7.4"
+        },
         "sort-packages": true
     },
     "extra": {
