--- a/.github/workflows/orca.yml
+++ b/.github/workflows/orca.yml
@@ -11,7 +11,7 @@ jobs:
     env:
       ORCA_SUT_NAME: acquia/drupal-environment-detector
       ORCA_SUT_BRANCH: master
-      ORCA_VERSION: dev-develop
+      ORCA_VERSION: ^3
       ORCA_JOB: ${{ matrix.orca-job }}
       ORCA_COVERALLS_ENABLE: ${{ matrix.coveralls-enable }}
       COVERALLS_REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
