--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -14,7 +14,7 @@ jobs:
     if: >-
       github.event.workflow_run.event == 'pull_request' &&
       github.event.workflow_run.conclusion == 'success' &&
-      github.event.workflow_run.actor.login == 'violinist-bot'
+      github.event.workflow_run.actor.login == 'dependabot[bot]'
     steps:
     - name: "Get PR information"
       uses: potiuk/get-workflow-origin@v1_3
@@ -22,7 +22,7 @@ jobs:
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
         sourceRunId: ${{ github.event.workflow_run.id }}
-    - run: 'gh pr merge --squash https://github.com/acquia/drupal-environment-detector/pull/${{ env.GITHUB_PR }}'
+    - run: 'gh pr merge --squash https://github.com/$GITHUB_REPOSITORY/pull/$GITHUB_PR'
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         GITHUB_PR: ${{ steps.source-run-info.outputs.pullRequestNumber }}
