Rename master branch

--- a/.github/workflows/orca.yml
+++ b/.github/workflows/orca.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       ORCA_SUT_NAME: acquia/drupal-environment-detector
-      ORCA_SUT_BRANCH: master
+      ORCA_SUT_BRANCH: main
       ORCA_VERSION: ^3
       ORCA_JOB: ${{ matrix.orca-job }}
       ORCA_COVERALLS_ENABLE: ${{ matrix.coveralls-enable }}
