--- a/.github/workflows/jira.yml
+++ b/.github/workflows/jira.yml
@@ -1,35 +1,14 @@
+name: Sync GitHub issues to Jira
+
 on:
   issues:
     types:
       - opened
+      - closed
 
-name: Create new tickets in Jira
+permissions:
+  issues: write
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    name: Create new tickets in Jira
-    permissions:
-      issues: write
-    steps:
-    - name: Login
-      uses: acquia/gajira-login@bearer
-      env:
-        JIRA_BASE_URL: ${{ secrets.JIRA_BASE_URL }}
-        JIRA_API_TOKEN: ${{ secrets.JIRA_API_TOKEN }}
-    - name: Create
-      id: create
-      uses: acquia/gajira-create@bearer
-      with:
-        project: DX
-        issuetype: Task
-        summary: ${{ github.event.issue.title }}
-        description: ${{ github.event.issue.html_url }}
-        fields: '{"components": [{"id": "26026"}]}'
-    - name: Update Github issue with Jira ticket prefix
-      run: 'gh issue edit $GH_ISSUE --title "$JIRA_ISSUE: $ISSUE_TITLE"'
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        GH_ISSUE: ${{ github.event.issue.html_url }}
-        JIRA_ISSUE: ${{ steps.create.outputs.issue }}
-        ISSUE_TITLE: ${{ github.event.issue.title }}
+  call-workflow:
+    uses: acquia/cli/.github/workflows/jira.yml@main
