--- a/.github/workflows/orca.yml
+++ b/.github/workflows/orca.yml
@@ -14,7 +14,7 @@ jobs:
     env:
       ORCA_SUT_NAME: acquia/drupal-environment-detector
       ORCA_SUT_BRANCH: main
-      ORCA_VERSION: ^3
+      ORCA_VERSION: ${{ matrix.orca-version }}
       ORCA_JOB: ${{ matrix.orca-job }}
       ORCA_COVERALLS_ENABLE: ${{ matrix.coveralls-enable }}
       COVERALLS_REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -44,22 +44,32 @@ jobs:
           - LOOSE_DEPRECATED_CODE_SCAN
         php-version: [ "8.1" ]
         coveralls-enable: [ "FALSE" ]
+        orca-version: [ "^4" ]
         include:
           - orca-job: INTEGRATED_TEST_ON_OLDEST_SUPPORTED
             php-version: "7.4"
             coveralls-enable: "FALSE"
+            orca-version: "^3"
 
           - orca-job: INTEGRATED_TEST_ON_OLDEST_SUPPORTED
             php-version: "8.0"
             coveralls-enable: "FALSE"
+            orca-version: "^3"
 
           - orca-job: INTEGRATED_TEST_ON_LATEST_LTS
             php-version: "7.4"
             coveralls-enable: "FALSE"
+            orca-version: "^3"
+
+          - orca-job: INTEGRATED_TEST_ON_LATEST_LTS
+            php-version: "8.2"
 
           - orca-job: ISOLATED_TEST_ON_CURRENT
             php-version: "8.1"
             coveralls-enable: "TRUE"
+
+          - orca-job: ISOLATED_TEST_ON_CURRENT
+            php-version: "8.2"
           # - orca-job: ISOLATED_TEST_ON_NEXT_MAJOR_LATEST_MINOR_DEV
           #   php-version: "8.1"
           #   coveralls-enable: "FALSE"
