RCAT-684 | Enable D11 jobs (#89)
* add D11 tests

* add D11 tests

* Add D11 tests

* PHPUnit 10

* remove phpunit

---------

Co-authored-by: Dane Powell <git@danepowell.com>
Co-authored-by: Sayan Goswami <sayan.goswami@acquia.com>

--- a/composer.json
+++ b/composer.json
@@ -11,15 +11,11 @@
     ],
     "require-dev": {
         "acquia/coding-standards": "^2.0.0",
-        "dealerdirect/phpcodesniffer-composer-installer": "^1.0.0",
-        "phpunit/phpunit": "^9.1"
+        "dealerdirect/phpcodesniffer-composer-installer": "^1.0.0"
     },
     "config": {
         "allow-plugins": {
             "dealerdirect/phpcodesniffer-composer-installer": true
-        },
-        "platform": {
-            "php": "7.4"
         },
         "sort-packages": true
     },
