--- a/.github/workflows/jira.yml
+++ b/.github/workflows/jira.yml
@@ -11,6 +11,7 @@ on:
       - closed
 permissions:
   issues: write
+  pull-requests: read
 jobs:
   jira:
     uses: acquia/.github/.github/workflows/jira.yml@main
